[project]
name = "plutus"
version = "0.1.0"
description = "CRDT-based state management for agentic swarms"
requires-python = ">=3.10"
dependencies = [
    "loro>=1.10.0",
    "msgpack>=1.0",
    "websockets>=13.0",
    "anyio>=4.0",
]

[project.optional-dependencies]
e2b = ["e2b>=1.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.8", "mypy>=1.13"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/plutus"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "anyio>=4.12.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
